--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "koa": "^2.13.4",
-    "koa-router": "^10.1.1"
+    "koa-body": "^5.0.0",
+    "koa-router": "^10.1.1",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.21.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
