--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_PORT=8888
 
 //数据库的配置
-MYSQL_HOST = localhost
-MYSQL_PORT = 3306
-MYSQL_USER = root   //用户名
-MYSQL_PWD = 123456  //密码
-MYSQL_DB = xz     //项目名称
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_USER=xiaozhu
+MYSQL_PWD=123456
+MYSQL_DB=xz
