--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-APP_PORT=8888
+APP_PORT = 8888
 
 //数据库的配置
-MYSQL_HOST=localhost
-MYSQL_PORT=3306
-MYSQL_USER=xiaozhu
-MYSQL_PWD=123456
-MYSQL_DB=xz
+MYSQL_HOST = localhost
+MYSQL_PORT = 3306
+MYSQL_USER = root
+MYSQL_PWD = root
+MYSQL_DB = xz
