--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.1",
     "koa": "^2.13.4",
     "koa-body": "^5.0.0",
     "koa-router": "^10.1.1",
+    "module-alias": "^2.2.2",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
+  },
+  "_moduleAliases": {
+    "@": "src"
   }
 }
