--- a/.env
+++ b/.env
@@ -1,8 +1,15 @@
 APP_PORT = 8888
 
-//数据库的配置
+#数据库的配置
+#Host
 MYSQL_HOST = localhost
+#端口号
 MYSQL_PORT = 3306
+#账号
 MYSQL_USER = root
+#密码
 MYSQL_PWD = root
+#数据库名称
 MYSQL_DB = xz
+#定义私钥
+JWT_SECRET = xz
